crates/strider-analyze/tests/snapshots/ppc64le__elf_relocs__helper_c.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x12c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "13" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
